--- a/angular-myownweb/src/index.html
+++ b/angular-myownweb/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- <script async defer src="//www.instagram.com/embed.js"></script> -->
 </body>
 </html>
